# beatdetector

./: .gitignore  CMakeLists.txt  README.md
include/: KeyPressWatcher.h  SpectrogramBar.h  Utilities.h
shaders/: bar.fs
src/: KeyPressWatcher.cpp  SpectrogramBar.cpp  Utilities.cpp  main.cpp
